--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <section class="conteudo-principal"></section>
+     <h2 class="titulo-principal">Meus Objetivos do Ano_</h2>
+     <div class="botoes">
+        <button class="botao">Cursos da Alura</button>
+        <button class="botao">Criar Projetos em Javascript</button>
+        <button class="botao">Criar um portfolio</button>
+        <button class="botao">Atualizar meu currículo</button>
+
+     </div>
     
 </body>
 </html>
